test/fail/transform/redefConstConst/test.twge
const x = 1;
const x = 2;